# agent_with_gitbook

./: .dockerignore  .gitignore  .railwayignore  Dockerfile  POETRY_RAILWAY.md  RAILWAY_DEPLOY.md  RENDER_DEPLOY.md  celery_app.py  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  config.py  docker-compose.yml  env-sample  generate_startup_token.py  gitbook_docs.json  gitbook_docs.jsonl  gitbook_dump.json  main.py  mlflow.db  nixpacks.toml  pyproject.toml  railway.toml  render.yaml  requirements.txt  seed_summary_reports.json  start_with_celery.sh  test_llm.py
agents/: agent_config.py  agent_models.py  query_agent.py
components/: chart_generator.py  database_selector.py  query_executor.py  result_processor.py  summary_generator.py
core/: config.py  container.py  exceptions.py  interfaces.py
data/: gitbook_bulk.jsonl
data_processor/: README.md  gitbook_ingester.py  jsonl_to_json.py
frontend/landing/: index.html  package-lock.json  package.json
frontend/landing/src/: App.jsx  styles.css
gitbook-chatbot-widget/: CHANGELOG.md  CORS_SETUP.md  GITBOOK_INTEGRATION.md  PRODUCTION_DEPLOY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  VISUAL_PREVIEW.md  chatbot-widget.css  chatbot-widget.js  config.js  demo.html  package.json  test.sh
gitbook-chatbot-widget/deploy/: widget-bundle.html
gitbook_docs/: documents.jsonl
middleware/: auth_context.py
mlruns/109951043840114035/: meta.yaml
mlruns/109951043840114035/6686238a592f40a180e7616df34402a2/: meta.yaml
mlruns/109951043840114035/6686238a592f40a180e7616df34402a2/tags/: mlflow.runName  mlflow.source.git.commit  runName  source
mlruns/109951043840114035/traces/tr-001dc8c01bdfc7f77a8f85f94bf74fc1/: trace_info.yaml
mlruns/109951043840114035/traces/tr-0259c390dd51bfda542c6242e447a3c2/: trace_info.yaml
mlruns/109951043840114035/traces/tr-04d2c9750baf17cdc0da3ef011550118/: trace_info.yaml
modules/: keyword_extractor.py  mcp_server.py  models.py  query_models.py  signatures.py
routes/: auth_routes.py  bulk_index_routes.py  chat_routes.py  chat_routes_old.py  conversation_routes.py  document_routes.py  elasticsearch_routes.py  gitbook_routes.py  main_routes.py  query_routes.py  search_routes.py
services/: auth_service.py  bulk_index_service.py  chat_service.py  conversation_service.py  document_service.py  gitbook_agent_service.py  gitbook_crawler.py  gitbook_processor.py  gitbook_service.py  llm_service.py  mapping_service.py  metadata_search_service.py  metadata_service.py  models.py  search_service.py
services/gitbook/: __init__.py  chunker.py  crawler.py  embedder.py  html_parser.py  http_utils.py  indexer.py  ingester.py  search.py
tasks/: bulk_index_tasks.py  document_tasks.py
tests/: conftest.py  gitbook_crawler_to_jsonl.py  gitbook_ingest_to_json.py  test_components.py  test_embedder.py  test_integration.py  test_interfaces.py  test_keyword_extractor.py  test_model.py
util/: chart_utils.py  context.py  cpu_config.py  logging_config.py  performance.py  redis_client.py  stream_handler.py  token_gen.py
(+222 files in other folders)
