[tool.poetry]
name = "dspy-agent"
version = "0.1.0"
description = ""
authors = ["saurabh <saurabh.1e1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12, <3.14"
fastapi = "^0.115.13"
uvicorn = "^0.34.3"
sse-starlette = "^2.3.6"
dspy = "^2.6.27"
ollama = "^0.5.1"
elasticsearch = "^9.0.2"
pyodbc = "^5.2.0"
mcp = "^1.9.4"
sentence-transformers = "^4.1.0"
pytest = "^8.4.1"
jwt = "^1.4.0"
pyjwt = "^2.10.1"
redis = "^6.2.0"
python-multipart = "^0.0.9"
docling = "^2.39.0"
docling-core = "^2.39.0"
boto3 = "^1.35.0"
requests = "^2.32.0"
openai = "^1.93.0"
bcrypt = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
