[tool.poetry]
name = "dspy-agent"
version = "0.1.0"
description = ""
authors = ["saurabh <saurabh.1e1@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12, <3.14"
# Core API dependencies
fastapi = "^0.115.13"
uvicorn = "^0.34.3"
sse-starlette = "^2.3.6"
python-multipart = "^0.0.9"
requests = "^2.32.0"

# AI/ML dependencies
dspy = "^2.6.27"
openai = "^1.93.0"

# Database dependencies
elasticsearch = "^9.0.2"
redis = "^6.2.0"

# Authentication
pyjwt = "^2.10.1"
bcrypt = "^4.3.0"

[tool.poetry.group.background.dependencies]
# Background task processing (optional - only if using Celery workers)
celery = "^5.5.3"

[tool.poetry.group.document.dependencies]
# Document processing (optional - only if using document upload features)
docling = "^2.39.0"
docling-core = "^2.39.0"

[tool.poetry.group.ingest.dependencies]
# Offline ingestion utilities (optional)
sentence-transformers = "^4.1.0"

[tool.poetry.group.mcp.dependencies]
# Model Context Protocol (optional - only if using MCP server)
mcp = "^1.9.4"

[tool.poetry.group.dev.dependencies]
# Development and testing
pytest = "^8.4.1"
mlflow = "^3.8.0"

# Unused dependencies (commented out - can be added if needed)
# ollama = "^0.5.1"  # Not used - using OpenAI instead
# pyodbc = "^5.2.0"  # Not used - no SQL database
# boto3 = "^1.35.0"  # Not used - no AWS S3


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
