[tool.poetry]
name = "dspy_agent_es_old"
version = "0.1.0"
description = ""
authors = ["saurabh <saurabh.1e1@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12, <3.14"
fastapi = "^0.115.13"
uvicorn = "^0.34.3"
sse-starlette = "^2.3.6"
dspy = "^2.6.27"
elasticsearch = "^8.15.0"
pyodbc = "^5.2.0"
mcp = "^1.9.4"
sentence-transformers = "^4.1.0"
pytest = "^8.4.1"
redis = "^6.2.0"
python-multipart = "^0.0.9"
docling = "^2.39.0"
docling-core = "^2.39.0"
boto3 = "^1.35.0"
requests = "^2.32.0"
openai = "^1.93.0"
bcrypt = "^4.3.0"
celery = "^5.5.3"
mlflow = "^3.8.1"
langchain = "^1.2.2"
langchain-text-splitters = "^1.1.0"
langchain-community = "^0.4.1"
beautifulsoup4 = "^4.14.3"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
